# SAGE-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_keys.example.json  pyproject.toml
docs/: SAGE_Business_Case.md  api_specification_full.docx  aws_deployment.md  bedrock_model_availability.md  claude_code_build_prompt.md
sage/: __init__.py  auth.py  config.py  exceptions.py  main.py
sage/models/: __init__.py  request.py  response.py
sage/services/: __init__.py  bedrock_provider.py  filter_engine.py  llm_provider.py  llm_service.py  openai_provider.py  orchestrator.py  report_generator.py  scoring_engine.py  ssr_engine.py  video_downloader.py
sage/tests/: conftest.py  test_api.py  test_auth.py  test_filter.py  test_llm_service.py  test_model_validation.py  test_orchestrator.py  test_provider_factory.py  test_scoring.py  test_ssr.py  test_video_downloader.py
sage/utils/: __init__.py  embeddings.py
testing/: README.md  run_tests.sh
testing/examples/: 01_smartwatch_input.json  01_smartwatch_output.json  02_skincare_filtered_input.json  02_skincare_filtered_output.json  03_protein_bar_input.json  03_protein_bar_output.json  04_coffee_subscription_input.json  04_coffee_subscription_output.json  05_meal_kit_filtered_input.json  05_meal_kit_filtered_output.json  06_lottery_gaming_input.json  06_lottery_gaming_output.json  07_lottery_large_sample_input.json  07_lottery_large_sample_output.json  08_lottery_distinctive_input.json  08_lottery_distinctive_output.json  08_lottery_distinctive_report.md  09_neon_velocity_input.json  (+97 more)
(+5 files in other folders)
